# vocdoni-passport-prover

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
artifacts/registry/minimal-default-0.16.0/: manifest.json
artifacts/registry/minimal-default-0.16.0/circuits/: data_check_integrity_sa_sha256_dg_sha256.json  disclose_bytes_evm.json  outer_evm_count_4.json
config/: compatibility-matrix.json
crates/acvm-witness-jni/: Cargo.toml
crates/acvm-witness-jni/src/: ffi.rs  lib.rs
crates/prover-cli/: Cargo.toml
crates/prover-cli/src/: main.rs
crates/prover-core/: Cargo.toml
crates/prover-core/src/: analysis.rs  artifacts.rs  certificates.rs  circuit.rs  config.rs  fixture.rs  lib.rs  pipeline.rs  planning.rs  proving.rs  registry.rs  resolution.rs  witness.rs
crates/prover-types/: Cargo.toml
crates/prover-types/src/: lib.rs
docker/: download_bb_crs.sh
fixtures/: README.md
fixtures/examples/debug-john/: certificates.json  document.json  request.json
fixtures/examples/minimal/: document-circuit-context.example.json  document.json  expected_outer.json  request.json
scripts/: aggregate-inputs.cjs  check-outer-continuity.cjs  outer-inputs.cjs  reference-inputs.cjs
server-go/: .env.example  Dockerfile  README.md  apk  docker-compose.yml  go.mod  go.sum
server-go/api/: deeplinks.go  request.go  server.go  server_test.go  templates.go
server-go/apk/: .gitkeep  README.md
server-go/cmd/: main.go
server-go/presets/: country_presets.json  presets.go  presets_test.go
server-go/proving/: benchmark_test.go  service.go
server-go/storage/: mongodb.go
solidity-check/: foundry.toml
solidity-check/test/: OuterCount4Latest.t.sol
