[workspace]
members = [
  "crates/acvm-witness-jni",
  "crates/prover-cli",
  "crates/prover-core",
  "crates/prover-types",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14", package = "acvm", default-features = false, features = ["bn254"] }
acir = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14", package = "acir", default-features = false, features = ["bn254"] }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14", package = "bn254_blackbox_solver" }
base64 = "0.22"
brillig_vm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14", package = "brillig_vm", default-features = false }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
isocountry = "0.3"
jni = "0.21"
nargo = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14", package = "nargo" }
noirc_abi = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14", package = "noirc_abi" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
x509-parser = "0.18"
