[package]
name = "prover-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
native-prover = ["prover-core/native-prover"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
prover-core = { path = "../prover-core" }
prover-types = { path = "../prover-types" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
