[package]
name = "prover-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
native-prover = []

[dependencies]
anyhow.workspace = true
acir.workspace = true
acvm.workspace = true
base64.workspace = true
bn254_blackbox_solver.workspace = true
brillig_vm.workspace = true
flate2.workspace = true
isocountry.workspace = true
nargo.workspace = true
noirc_abi.workspace = true
prover-types = { path = "../prover-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
x509-parser.workspace = true
